--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ $RECYCLE.BIN/
 dataset.pickle
 new_dataset.pickle
 new_dataset_with_quarters.pickle
+selected_features.pickle
+selected_features.pickle
